<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height" />

        <EditText
            android:id="@+id/etIdHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="decimal"
            android:hint="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <EditText
            android:id="@+id/etIdWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="decimal"
            android:hint="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal" >
        <TextView
        	android:id="@+id/tvIdSex"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sex"   />  
     
	    <RadioGroup
	        android:id="@+id/rgIdSex"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:checkedButton="@+id/cbIdMale"
	        android:orientation="horizontal" >
	
	        <RadioButton
	            android:id="@+id/rbIdMale"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/male" />
	
	        <RadioButton
	            android:id="@+id/rbIdFemale"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/female" />
	
	    </RadioGroup>
    
</LinearLayout>

    <TextView
        android:id="@+id/tvShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hello" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <TableRow
				android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:gravity="center">
	            <Button 
	                android:id="@+id/btnDetermine"
					android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		android:text="@string/determine" />
				<Button 
	                android:id="@+id/btnLeave"
					android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		android:text="@string/leave" />"
        </TableRow>
        
    </TableLayout>

</LinearLayout>